fix: preserve hello capability ordering